src/App.css
.App {
  text-align: center;
  max-width: 80%;
  margin: 0 auto;
  font-family: Helvetica, Arial, sans-serif;
}

.JoinUsSingle{
  background-color: #B61B28;
  color: white;
  font-size: 48px;
  line-height: 48px;
  font-weight: 600;
  padding: 0px 14px;
}

.NameBlock{
  background-color: white;
  display: grid;
  grid-auto-flow: dense;
  grid-template-columns: repeat( auto-fit, minmax(230px, 1fr) );
  grid-template-rows: repeat(50px);
  row-gap: 8px;
  column-gap: 8px;
}

/* */

.Name{
  background-color: #b7e4cf;
  padding: 0px 14px;
  height: 50px;
  white-space: nowrap;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#expandStory{
  font-size: 16px;
  align-content: center;
  height: 100%;
  width: 110%;
  background-color: transparent;
  border: none;
  background-image: url("./downArrow.svg");
  background-repeat: no-repeat;
  background-position: 95% 50%;
  
}

#nameDebt{
  margin: 0 auto;
  font-size: 16px;
}

/* */

.noscroll{
  overflow: hidden;
}

.modal-container {
  z-index: 999;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.7);
}

.modal-content {
  width: 80%;
  max-width: 600px;
  min-width: 40%;
  height: 70%;
  padding: 14px 14px 36px 14px;
  border: 1px solid #d8dce3;
  border-radius: 3px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.5);
  background-color: #fdfdfe;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.modal-header{
  height: 49px;
  width: 100%;
  padding-left: 12px;
  font-weight: 600;
  font-size: 16px;
  line-height: 73px;
}

.modal-body{
  flex-grow: 1;  
  width: 100%;
  padding-top: 16px;
  padding-left: 12px;
  overflow-y: auto;
}

.modal-footer{
  display: flex;
  justify-content: flex-end;
  align-content: center;
  padding-top: 14px;
}

.cross-btn{
  background-color: transparent;
  float: right;
  border: none;
}

.close-btn {
  font-weight: 600;
  font-size: 18px;
  background: #d5d5d5;
  border: none;
  height: 42px;
  cursor: pointer;
}

/* */

input{
  border: 2px solid black;
  font-size: 16px;
  padding: 10px 10px 10px 10px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;  
}

textarea{
  border: 2px solid black;
  font-size: 16px;
  padding: 10px 10px 10px 10px;
  height: 135px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
  resize: none;
}

label{
  white-space: nowrap;
}

/* */

.AddYourStory{
  background-color:white;
  border-top: 6px solid #B61B28;
  border-bottom: 6px solid #B61B28;
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 10px;
  padding-bottom: 31px;
  grid-column: span 2;
  grid-row: span 7;
  text-align: left;
  display: grid;
  column-gap: 8px;
  row-gap: 10px;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 41px 60px 1fr 50px ;
  grid-template-areas: 
  "header header header" 
  "name name debt"
  "story story story"
  "email email submit";
}

@media (max-width: 599px){
  .AddYourStory{
    grid-column: span 1;
  }
}

#AYSemail{
  grid-area: email;
  align-self: end;
}

#AYSheader{
  grid-area: header;
}

#AYSname{
  grid-area: name;
}
        
#AYSdebt{
  grid-area: debt;
}

#AYSdebt input{
  background-image: url("./dollarsign.svg");
  background-repeat: no-repeat;
  background-position: 8px 10px;
  padding: 10px 10px 10px 19px;
}
        
#AYSstory{
  grid-area: story;
}

#AYSsubmit{
  grid-area: submit;
  align-self: end;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 18px;
  background: #d5d5d5;
  border: none;
  height: 42px;
  }

.error{
  background-color: rgba(182,27,40, 0.2);
  border: rgb(182,27,40) 2px solid;
}

.errormessage{
  position: relative;
  left: 10px;
  color: rgb(182,27,40);
  font-size: 14px;
}

/* */
.storyAdded{
  background-color:white;
  border-top: 6px solid #B61B28;
  border-bottom: 6px solid #B61B28;
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 10px;
  padding-bottom: 20px;
  grid-column: span 2;
  grid-row: span 3;
  text-align: left;
  display: grid;
  column-gap: 8px;
  row-gap: 10px;
  grid-template-columns: 1fr;
  grid-template-rows: 41px 1fr;
  grid-template-areas: 
  "header" 
  "message";
}

@media (max-width: 599px){
  .storyAdded{
    grid-column: span 1;
  }
}

#SAheader{
  grid-area: header;
}

#SAmessage{
  grid-area: message;
  line-height: 10px;
}

#SAlinks{
  grid-area: links;
}
/* */

.disclaimer{
  padding-top: 20px;
  padding-bottom: 20px;
  font-size: 11px;
  line-height: 5px;
}

